<resources>
    <string name="tieude1">Nabi Shop</string>
    <string name="tieude2">Category</string>
    <string name="tieude3">Shirt</string>
    <string name="tieude4">Pants</string>
    <string name="tieude5">Dress</string>
    <string name="tieude6">Shoes</string>
    <string name="line1"> <strike>đ 470.000</strike> </string>
    <string name="line2"><strike>đ 400.000</strike></string>
    <string name="line3"><strike>đ 320.000</strike></string>
    <string name="line4"><strike>đ 600.000</strike></string>
</resources>