<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgr_1"
    tools:context=".shirt">
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/backgr_1"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="85dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:src="@drawable/back" />
        </FrameLayout>
        <TextView
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/lobsterregular"
            android:gravity="center"
            android:text="@string/tieude5"
            android:textColor="@color/cam"
            android:textSize="40dp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/vay"
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="690dp">

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:background="@color/backgr_1">

            <FrameLayout
                android:layout_width="175dp"
                android:layout_height="350dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginLeft="20dp"
                android:background="@drawable/customborder">

                <ImageView
                    android:layout_width="156dp"
                    android:layout_height="250dp"
                    android:src="@drawable/vay1" />

                <TextView
                    android:layout_width="156dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="250dp"
                    android:text="Long Swing Dress"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="85dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="300dp"
                        android:text="đ 310.000"
                        android:textColor="@color/cam"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="71dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="305dp"
                        android:text="@string/line1"
                        android:textColor="@color/gia_cu"
                        android:textSize="14dp" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="175dp"
                android:layout_height="350dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginLeft="20dp"
                android:background="@drawable/customborder">

                <ImageView
                    android:layout_width="156dp"
                    android:layout_height="250dp"
                    android:src="@drawable/vay2" />

                <TextView
                    android:layout_width="156dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="250dp"
                    android:text="Aumoti Ruffle Trim
Blouse"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="85dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="300dp"
                        android:text="đ 350.000"
                        android:textColor="@color/cam"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="71dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="305dp"
                        android:text="@string/line2"
                        android:textColor="@color/gia_cu"
                        android:textSize="14dp" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="175dp"
                android:layout_height="350dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/customborder">

                <ImageView
                    android:layout_width="156dp"
                    android:layout_height="250dp"
                    android:src="@drawable/vay3" />

                <TextView
                    android:layout_width="156dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="250dp"
                    android:text="Floral skirt"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="85dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="300dp"
                        android:text="đ 220.000"
                        android:textColor="@color/cam"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="71dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="305dp"
                        android:text="@string/line3"
                        android:textColor="@color/gia_cu"
                        android:textSize="14dp" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="175dp"
                android:layout_height="350dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/customborder">

                <ImageView
                    android:layout_width="156dp"
                    android:layout_height="250dp"
                    android:src="@drawable/vay4" />

                <TextView
                    android:layout_width="156dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="250dp"
                    android:text="Collared Long-Sleeve Midi A-Line Dress"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="85dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="300dp"
                        android:text="đ 550.000"
                        android:textColor="@color/cam"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="71dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="305dp"
                        android:text="@string/line4"
                        android:textColor="@color/gia_cu"
                        android:textSize="14dp" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="175dp"
                android:layout_height="350dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/customborder">

                <ImageView
                    android:layout_width="156dp"
                    android:layout_height="250dp"
                    android:src="@drawable/vay5" />

                <TextView
                    android:layout_width="156dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="250dp"
                    android:text="Converse chuck taylor all star"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="85dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="300dp"
                        android:text="đ 550.000"
                        android:textColor="@color/cam"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="71dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="305dp"
                        android:text="@string/line4"
                        android:textColor="@color/gia_cu"
                        android:textSize="14dp" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="175dp"
                android:layout_height="350dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/customborder">

                <ImageView
                    android:layout_width="156dp"
                    android:layout_height="250dp"
                    android:src="@drawable/vay6" />

                <TextView
                    android:layout_width="156dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="250dp"
                    android:text="Converse chuck taylor all star"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="85dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="300dp"
                        android:text="đ 550.000"
                        android:textColor="@color/cam"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="71dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="305dp"
                        android:text="@string/line4"
                        android:textColor="@color/gia_cu"
                        android:textSize="14dp" />
                </LinearLayout>
            </FrameLayout>
        </GridLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/bar"
        android:layout_below="@id/vay"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/line"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="103dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:src="@drawable/sao2"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="103dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:src="@drawable/bag1"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="103dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:src="@drawable/giohang2"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="103dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:src="@drawable/user2"/>
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>